# med_doc_processing

./: .dockerignore  .env.example  .gitignore  .replit  AWS_DEPLOYMENT_GUIDE.md  CURRENT_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_ROADMAP.md  DEPLOYMENT_SUCCESS.md  DOCKER_README.md  DOCKER_SUCCESS.md  Dockerfile.frontend  GITHUB_ACTIONS_SETUP.md  INSTALL_AWS_TOOLS.md  MedicalDocAI_Presentation.docx  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  deploy-aws.ps1  design_guidelines.md  docker-compose.yml  generate_architecture.py  generate_presentation.py  netlify.toml  package-lock.json  package.json  pyproject.toml  replit_setup.md  start-backend.sh  vercel.json  vite.config.ts
.github/workflows/: ci-cd.yml
attached_assets/: Pasted-Goal-Build-a-single-Replit-project-for-Medical-Doc-AI-that-runs-frontend-React-Vite-TS-and-back-1761636550956_1761636550958.txt  Pasted-You-are-generating-a-complete-minimal-monorepo-for-an-MVP-called-Medical-Doc-AI-Create-THIS-EXAC-1761636409525_1761636409528.txt
backend-fastapi/: .dockerignore  .env.example  Dockerfile  render.yaml  requirements.txt
backend-fastapi/app/: __init__.py  (+2 more)
client/: .env.production.example  index.html  package.json
docs/: Backend_API_Documentation.docx  Cloud_Infrastructure_Report.docx  Features_and_Roadmap.docx
evals/: README.md  run_eval.py
scripts/: configure-s3-eval-bucket.sh  generate_docs.py  run_local_eval.py  setup-custom-domain.ps1  setup-https.ps1  setup-https.sh
shared/: schema.ts
test_docs/: bmp_sample.txt  cbc_sample.txt  ct_sample.txt  note_sample.txt  xray_sample.txt
(+61 files in other folders)
