[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.39.0",
    "fastapi==0.115.2",
    "pydantic==2.9.2",
    "pydantic-settings>=2.11.0",
    "pypdf==5.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.36",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.30.6",
]
